--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,12 @@
     "@tanstack/react-query": "^5.20.0",
     "clsx": "^2.1.1",
     "next": "^14.2.5",
-    "recharts": "^2.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.9.0",
     "tailwind-merge": "^2.3.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.0",
